Tue Dec  3 14:26:05 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-details.c (window_theme_selection_changed): Fix
	g_assert_not_reached() that can be reached.

Tue Dec  3 00:40:13 2002  Jonathan Blandford  <jrb@gnome.org>

	* .cvsignore: shut up, CVS

	* Makefile.am: build new objects

	* gnome-theme-details.[ch]: New file to encapsulate the details
	dialog.

	* gnome-theme-manager.c: Restructure code.  Less love, more work.
	Prolly an improvement.

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

Sat Nov 16 00:55:58 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (meta_theme_selection_changed): actually
	set the theme.

Thu Nov 14 19:30:02 2002  Jonathan Blandford  <jrb@gnome.org>

	* theme-thumbnail.c (setup_theme_thumbnail_factory): add G_IO_HUP
	so the child can actually exit when the parent does.

Thu Nov 14 17:14:00 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c: Use new theme system.  Handle other
	themes better.

	* theme-thumbnail.c: new file to draw themes.  Currently
	synchronous -- needs to be made async.

Thu Nov  7 15:24:33 2002  Jonathan Blandford  <jrb@gnome.org>

	* gtk-theme-selector.desktop.in (Exec): change binary name.

Tue Nov  5 15:48:20 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (read_themes): make more robust.

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Makefile.am : Add missing file

Fri Nov  1 11:01:16 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c: Rewrote to handle metathemes and icon
	themes.  The WM stuff was previously broken, too.

	* gnome-theme-installer.[ch]: Extract this code out to it's own
	file.

2002-10-26  Havoc Pennington  <hp@pobox.com>

	* theme-switcher.c (window_read_themes): adapt to gnome-wm-manager
	API changes

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-01  Yanko Kaneti <yaneti@declera.com>
