@@ -1,0 +1,12 @@
+#ifndef __GNOME_THEME_SAVE_H__
+#define __GNOME_THEME_SAVE_H__
+
+
+#include <gtk/gtk.h>
+#include "gnome-theme-info.h"
+
+void gnome_theme_save_show_dialog (GtkWidget          *parent,
+				   GnomeThemeMetaInfo *meta_theme_info);
+
+
+#endif /* __GNOME_THEME_SAVE_H__ */
