@@ -1,3 +1,8 @@
+Tue Dec  3 20:45:17 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-theme-save.c: Add saving support.  Almost to a working
+	point w/ this capplet...
+
 Tue Dec  3 14:26:05 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-theme-details.c (window_theme_selection_changed): Fix
